--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,7 +17,7 @@ set $mod Mod4
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+font pango:Noto Sans Mono Med 11
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -94,16 +94,16 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
+set $ws1 "1: Editor "
+set $ws2 "2: Web "
+set $ws3 "3: Terminals "
+set $ws4 "4: Misc"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+set $ws8 "8: GitHub "
+set $ws9 "9: Slack "
+set $ws10 "10: Music "
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -129,6 +129,10 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+assign [class="jetbrains-idea"] $ws1
+assign [class="Google-chrome"] $ws2
+assign [class="Slack"] $ws9
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -138,43 +142,37 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+	# These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+	# Pressing left will shrink the window’s width.
+	# Pressing right will grow the window’s width.
+	# Pressing up will shrink the window’s height.
+	# Pressing down will grow the window’s height.
+	bindsym h resize shrink width 10 px or 10 ppt
+	bindsym j resize grow height 10 px or 10 ppt
+	bindsym k resize shrink height 10 px or 10 ppt
+	bindsym l resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+	# same bindings, but for the arrow keys
+	bindsym Left resize shrink width 10 px or 10 ppt
+	bindsym Down resize grow height 10 px or 10 ppt
+	bindsym Up resize shrink height 10 px or 10 ppt
+	bindsym Right resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
+	# back to normal: Enter or Escape or $mod+r
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
+	bindsym $mod+r mode "default"
 }
 
 bindsym $mod+r mode "resize"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-}
 
 # Lock the screen and turn off the display
 bindsym $mod+shift+x exec i3lock && xset dpms force off
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% # decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Screen brightness controls
@@ -182,7 +180,7 @@ bindsym XF86MonBrightnessUp exec enlighten +5% # increase screen brightness
 bindsym XF86MonBrightnessDown exec enlighten -5% # decrease screen brightness
 
 # Touchpad controls
-bindsym XF86TouchpadToggle exec ~/bin/touchpad_toggle.sh # toggle touchpad
+bindsym $mod+t exec ~/bin/touchpad_toggle.sh # toggle touchpad
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play
@@ -194,4 +192,44 @@ bindsym XF86AudioPrev exec playerctl previous
 bindsym $mod+p exec mons -n right
 
 # Set background
-exec_always feh --bg-scale ~/images/wallpapers/QgcvxZf.jpg
+exec_always feh --bg-scale ~/images/wallpapers/343272.jpg
+
+# Hide borders
+hide_edge_borders both
+for_window [class=".*"] border pixel 0
+
+# Set colors
+set $bg-color			#2f343f
+set $inactive-bg-color		#2f343f
+set $text-color			#f3f4f5
+set $inactive-text-color	#676E7D
+set $urgent-bg-color		#E53935
+
+# Assign colors
+#			border			background		text			border (not used)
+client.focused		$bg-color		$bg-color		$text-color		$text-color
+client.unfocused	$inactive-bg-color	$inactive-bg-color	$inactive-text-color	$inactive-text-color
+client.focused_inactive	$inactive-bg-color	$inactive-bg-color	$inactive-text-color	$inactive-text-color
+client.urgent		$urgent-bg-color	$urgent-bg-color	$text-color		$inactive-text-color
+
+# bar
+bar {
+	status_command i3blocks
+	colors {
+		background $bg-color
+		separator #757575
+		#			border			background		text
+		focused_workspace	$bg-color		$bg-color		$text-color
+		inactive_workspace	$inactive-bg-color	$inactive-bg-colord	$inactive-text-color
+		urgent_workspace	$urgent-bg-color	$urgent-bg-color	$text-color
+	}
+}
+
+# Gaps
+gaps inner 0
+gaps outer 10
+bindsym $mod+o gaps outer current set 0; gaps inner current set 10
+bindsym $mod+i gaps outer current set 20; gaps inner current set 20
+
+# Start up programs
+exec slack
