--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,7 +17,7 @@ set $mod Mod4
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Noto Sans Mono Med 11
+font pango:Noto Sans Mono Med 9
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -197,7 +197,7 @@ exec_always feh --bg-scale ~/images/wallpapers/vVv8ka28BTyQMv8AsaByefIYhoFVRfTBf
 # Hide all borders for gaps to work properly
 hide_edge_borders both
 for_window [class=".*"] border pixel 0
-default_border none
+default_border pixel
 
 # Set colors
 set $bg-color			#2f343f
@@ -233,7 +233,7 @@ bindsym $mod+o gaps outer current set 0; gaps inner current set 10
 bindsym $mod+i gaps outer current set 20; gaps inner current set 20
 
 # Start up programs
-exec slack
+exec surf bandwidth.slack.com
 
 # Set GTK themes
 exec_always export GTK_THEME=Arc:Dark
