--- a/.config/i3/config
+++ b/.config/i3/config
@@ -67,10 +67,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+b split h
+bindsym $mod+g split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+bindsym $mod+Shift+g split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -104,6 +104,16 @@ set $ws7 "7"
 set $ws8 "8: GitHub "
 set $ws9 "9: Slack "
 set $ws10 "10: Music "
+set $ws11 "11"
+set $ws12 "12"
+set $ws13 "13"
+set $ws14 "14"
+set $ws15 "15"
+set $ws16 "16"
+set $ws17 "17"
+set $ws18 "18"
+set $ws19 "19"
+set $ws20 "20"
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -116,6 +126,16 @@ bindsym $mod+7 workspace $ws7
 bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
+bindsym $mod+z workspace $ws11
+bindsym $mod+x workspace $ws12
+bindsym $mod+c workspace $ws13
+bindsym $mod+v workspace $ws14
+bindsym $mod+b workspace $ws15
+bindsym $mod+n workspace $ws16
+bindsym $mod+m workspace $ws17
+bindsym $mod+comma workspace $ws18
+bindsym $mod+period workspace $ws19
+bindsym $mod+slash workspace $ws20
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
@@ -128,6 +148,16 @@ bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+z move container to workspace $ws11
+bindsym $mod+Shift+x move container to workspace $ws12
+bindsym $mod+Shift+c move container to workspace $ws13
+bindsym $mod+Shift+v move container to workspace $ws14
+bindsym $mod+Shift+b move container to workspace $ws15
+bindsym $mod+Shift+n move container to workspace $ws16
+bindsym $mod+Shift+m move container to workspace $ws17
+bindsym $mod+Shift+comma move container to workspace $ws18
+bindsym $mod+Shift+period move container to workspace $ws19
+bindsym $mod+Shift+slash move container to workspace $ws20
 
 assign [class="jetbrains-idea"] $ws1
 # assign [class="Google-chrome"] $ws2
@@ -145,7 +175,7 @@ bindsym $mod+Shift+Mod1+Up move workspace to output up
 bindsym $mod+Shift+Mod1+Right move workspace to output right
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+bindsym $mod+Shift+Mod1+r reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
@@ -178,8 +208,11 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Switch to the last used workspace
+bindsym $mod+grave workspace back_and_forth
+
 # Lock the screen and turn off the display
-bindsym $mod+shift+x exec i3lock -c 000000 -f && sleep 1 && xset dpms force off
+bindsym $mod+F7 exec lock
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
@@ -200,10 +233,10 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # Multi-monitor controls
-bindsym $mod+p exec mons -n right
+bindsym $mod+p exec ~/.screenlayout/plugged-in-right-vertical.sh
 
 # Set background
-exec_always feh --bg-scale ~/images/wallpapers/874823.jpg
+exec_always feh --bg-fill ~/images/wallpapers/ayvgndq0v4v01.jpg
 
 # Hide all borders for gaps to work properly
 hide_edge_borders both
